bridge/base/laravel-api-deployment.yaml
#! laravel-api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: laravel-api
    namespace: afmsnextj
    labels:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: laravel-api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: afmsnextj
            com.docker.compose.service: laravel-api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: afmsnextj
                com.docker.compose.service: laravel-api
                com.docker.compose.network.afms-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: laravel-api
                  image: afmsnextj-laravel-api
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost/health']
                    periodSeconds: 30
                    initialDelaySeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: laravel-api-80
                      containerPort: 80
                    - name: laravel-ap-9000
                      containerPort: 9000
                  volumeMounts:
                    - name: var-www-html-storage
                      mountPath: /var/www/html/storage
                    - name: var-www-html-storage-logs
                      mountPath: /var/www/html/storage/logs
            volumes:
                - name: var-www-html-storage
                  persistentVolumeClaim:
                    claimName: laravel-api-laravel-storage
                - name: var-www-html-storage-logs
                  persistentVolumeClaim:
                    claimName: laravel-api-laravel-logs
