bridge/base/nextjs-deployment.yaml
#! nextjs-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nextjs
    namespace: afmsnextj
    labels:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: nextjs
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: afmsnextj
            com.docker.compose.service: nextjs
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: afmsnextj
                com.docker.compose.service: nextjs
                com.docker.compose.network.afms-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: nextjs
                  image: afmsnextj-nextjs
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:3000/api/kesehatan']
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: nextjs-3000
                      containerPort: 3000
                  volumeMounts:
                    - name: app-prisma
                      mountPath: /app/prisma
            volumes:
                - name: app-prisma
                  hostPath:
                    path: C:\laragon\www\afmsnextj\prisma
