bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: afmsnextj
    labels:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: afmsnextj
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: afmsnextj
                com.docker.compose.service: redis
                com.docker.compose.network.afms-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  command: [redis-server --appendonly yes]
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: redis-6379
                      containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: redis-redis-data
