bridge/base/nextjs-expose.yaml
#! nextjs-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nextjs
    namespace: afmsnextj
    labels:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: nextjs
spec:
    selector:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: nextjs
    ports:
        - name: nextjs-3000
          port: 3000
          targetPort: nextjs-3000
