bridge/base/postgres-expose.yaml
#! postgres-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres
    namespace: afmsnextj
    labels:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: postgres
spec:
    selector:
        com.docker.compose.project: afmsnextj
        com.docker.compose.service: postgres
    ports:
        - name: postgres-5432
          port: 5432
          targetPort: postgres-5432
