bridge/base/afms-network-network-policy.yaml
#! afms-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: afms-network-network-policy
    namespace: afmsnextj
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.afms-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.afms-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.afms-network: "true"
